tests/fsharp/typecheck/sigs/neg10_a.bsl

neg10_a.fs(8,6,8,7): typecheck error FS0249: Two type definitions named 'x' occur in namespace 'N' in two parts of this assembly
