tests/fsharp/typecheck/sigs/neg10_a.fs
namespace N

type x = int


namespace N

type x = A | B

